--- a/uploadplattform/hauptseite/templates/hauptseite/login.html
+++ b/uploadplattform/hauptseite/templates/hauptseite/login.html
@@ -6,12 +6,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'hauptseite/style.css' %}">
-    <title>Hauptseite</title>
+    <title>Login Page</title>
 </head>
 <body>
     <header>
         <div>
-            <h1>Video-Upload page</h1>
+            <h1>Login</h1>
         </div>
 
         <div>
@@ -25,8 +25,8 @@
     </div>
 
     <footer>
-        <button onclick="window.location.href='http://127.0.0.1:8000/home';">Home</button>
-        <button  onclick="window.location.href='http://127.0.0.1:8000/about';">About</button>
+        <a href="\">home</a>
+        <a href="about">about</a>
     </footer>
 </body>
 </html>
