--- a/uploadplattform/videos/templates/videos/for_you.html
+++ b/uploadplattform/videos/templates/videos/for_you.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="{% static 'hauptseite/style.css' %}">    
+    <link rel="stylesheet" href="{% static 'videos/style.css' %}">    
     <title>Main Page</title>
 </head>
 <body>
