--- a/uploadplattform/videos/templates/videos/upload.html
+++ b/uploadplattform/videos/templates/videos/upload.html
@@ -1,9 +1,11 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'hauptseite/style.css' %}">    
+    <link rel="stylesheet" href="{% static 'videos/style.css' %}">    
     <title>Upload a Video</title>
 </head>
 <body>
@@ -17,5 +19,6 @@
             <button onclick="window.location.href='http://127.0.0.1:8000/login';">Login</button>
         </div>
     </header>
+
 </body>
 </html>
