--- a/uploadplattform/videos/templates/videos/for_you.html
+++ b/uploadplattform/videos/templates/videos/for_you.html
@@ -13,6 +13,11 @@
         </div>
 
         <div>
+            <form method="get" action="" style="display: inline-block; margin-right: 10px;">
+                <input type="text" name="q" placeholder="Suche Videos..." value="{{ request.GET.q }}">
+                <button type="submit">🔍</button>
+            </form>
+
             <button onclick="window.location.href='http://127.0.0.1:8000/upload';">Upload</button>
             <button onclick="window.location.href='http://127.0.0.1:8000/login';">Login</button>
         </div>
@@ -31,6 +36,8 @@
                 <h3>{{ video.title }}</h3>
             </a>
         </div>
+    {% empty %}
+        <p>Keine Videos gefunden.</p>
     {% endfor %}
 
     </div>
